--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "start": "nodemon index.js"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.14"
-  },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
